<resources>
    <string name="app_name">DoIt</string>
    <string name="tab_icon_desc">Tab Icon</string>
    <string name="add_task_title">Let\'s Add a New Task!</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="task_title_et_hint">Task Title</string>
    <string name="task_description_et_hint">Task Description</string>
    <string name="task_deadline_date_et_hint">Task Date</string>
    <string name="task_deadline_time_et_hint">Task Time</string>
    <string name="date_label_name">Date</string>
    <string name="time_label_name">Time</string>
    <string name="task_deadline_label">Task Deadline</string>
    <string name="date_picker_icon_desc">Date Picker Icon</string>
    <string name="time_picker_icon_desc">Time Picker Icon</string>
    <string name="more_options_icon_desc">More Options Icon</string>
    <string name="task_status_icon_desc">Task Statues Icon</string>
    <string name="bottom_nav_home_title">Home</string>
    <string name="bottom_nav_search_title">Search</string>
    <string name="fab_button_desc">FAB Button</string>
    <string name="delete_task_option_title">Delete Task</string>
    <string name="edit_task_option_title">Edit Task</string>
    <string name="complete_task_option_title">Complete Task</string>

    <string name="task_option_icon_desc">Task Option Icon</string>
    <string name="search_bar_hint">Search tasks</string>
</resources>